--- a/gavel_ci/templates/build.html
+++ b/gavel_ci/templates/build.html
@@ -44,6 +44,9 @@
     <td>
       <a href="{{url_for('jobserv.run', proj=project, build=build.build_id, run=run.name)}}">{{run.name}}</a>
       <a href="{{url_for('jobserv.run_artifact', proj=project, build=build.build_id, run=run.name, p='console.log')}}">(logs)</a>
+      {% if run.tests %}
+        <a href="{{url_for('jobserv.tests', proj=project, build=build.build_id, run=run.name)}}">(tests)</a>
+      {% endif %}
     </td>
     {% if run.status == 'PASSED' %}
     <td class="bg-success">{{run.status}}</td>
