--- a/gavel_ci/templates/project.html
+++ b/gavel_ci/templates/project.html
@@ -2,6 +2,31 @@
 {% block body %}
 <h1>Gavel CI Project: {{project}}</h1>
 
+{% if current_user.is_admin %}
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#projectTriggers">
+Project Triggers
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="projectTriggers" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title">Project Triggers</h3>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="triggers">Loading ... </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+{% endif %}
+
+<h3>Builds</h3>
 <table class="table table-striped table-bordered">
   <thead>
     <tr><th>Build #</th><th>Status</th><th>Trigger Name</th><th>Created</th><th>Completed</th></tr>
@@ -30,3 +55,35 @@
   </tbody>
 </table>
 {% endblock %}
+
+{% if current_user.is_admin %}
+{% block script %}
+<script>
+$('#projectTriggers').on('shown.bs.modal', function () {
+  $('#triggers').html("Loading...");
+  $.getJSON("./triggers/", function(data) {
+    var html = "";
+    if (data.length == 0)
+      html = "No triggers defined.";
+    for(var i=0; i<data.length; i++){
+      html += "<h3>" + data[i].type + "</h3>";
+      html += "<dl class='dl-horizontal'>";
+      html += "<dt>Creator</dt><dd>" + data[i].user + "</dd>";
+      if (data[i].definition_repo)
+        html += "<dt>Definition Repo</dt><dd>" + data[i].definition_repo + "</dd>";
+      if (data[i].definition_file)
+        html += "<dt>Definition File</dt><dd>" + data[i].definition_file + "</dd>";
+      html += "</dl>";
+      html += "<h4>Secrets</h4>";
+      html += "<ul>";
+      for(var j=0; j<data[i].secrets.length; j++){
+        html += "<li>" + data[i].secrets[j] + "</li>";
+      }
+      html += "</ul>";
+    }
+    $('#triggers').html(html);
+  });
+})
+</script>
+{% endblock %}
+{% endif %}
