--- a/gavel_ci/templates/layout.html
+++ b/gavel_ci/templates/layout.html
@@ -48,6 +48,8 @@
     {% block body %}{% endblock %}
     </div> <!-- container -->
 
+    <script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    {% block script %}{% endblock %}
   </body>
 </html>
