Add ability to create a project
Signed-off-by: Andy Doan <andy@opensourcefoundries.com>

--- a/gavel_ci/templates/layout.html
+++ b/gavel_ci/templates/layout.html
@@ -19,6 +19,9 @@
         <ul class="nav navbar-nav navbar-right">
           {%- if current_user.is_authenticated -%}
           <li><a href="#"><span class="glyphicon glyphicon-user"></span> {{current_user.login}}</a></li>
+          {%- if current_user.is_admin -%}
+          <li><a href="#" data-toggle="modal" data-target="#createProject"><span class="glyphicon glyphicon-plus"></span> Create project</a></li>
+          {%- endif -%}
           <li><a href="{{url_for('auth.logout')}}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
           {%- else -%}
           <li><a href="{{url_for('auth.login')}}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -28,6 +31,34 @@
     </nav>
 
     <div class="container">
+
+    {%- if current_user.is_admin -%}
+    <div class="modal fade" id="createProject" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <form method="post" action="/project/">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Create New Project</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <label for="createProjectName">Name</label>
+                <input type="text" class="form-control" name="name">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Create</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    {%- endif -%}
+
 
     {% with messages = get_flashed_messages() %}
       {% if messages %}
