--- a/gavel_ci/templates/project.html
+++ b/gavel_ci/templates/project.html
@@ -13,6 +13,7 @@ Project Triggers
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title">Project Triggers</h3>
+        <a href="./new-trigger-github/" class="btn btn-primary btn-sm">Create New</a>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
