Add an about link
Signed-off-by: Andy Doan <andy@foundries.io>

--- a/gavel_ci/templates/layout.html
+++ b/gavel_ci/templates/layout.html
@@ -15,7 +15,7 @@
    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Gavel CI <i class="fas fa-gavel"></i></a>
+          <a class="navbar-brand" href="{{url_for('jobserv.about')}}">Gavel CI <i class="fas fa-gavel"></i></a>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="{{url_for('jobserv.status')}}"><span class="glyphicon glyphicon-dashboard"></span> Status</a></li>
