--- a/gavel_ci/templates/layout.html
+++ b/gavel_ci/templates/layout.html
@@ -24,7 +24,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {%- if current_user.is_authenticated -%}
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> {{current_user.login}}</a></li>
+          <li><a href="{{url_for('settings.index')}}"><span class="glyphicon glyphicon-user"></span> {{current_user.login}}</a></li>
           <li><a href="{{url_for('auth.logout')}}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
           {%- else -%}
           <li><a href="{{url_for('auth.login')}}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
