UI: Include some breadcrumbs for builds and runs
This makes poking around builds and runs for a project a lot easier

Signed-off-by: Andy Doan <andy@foundries.io>

--- a/gavel_ci/templates/build.html
+++ b/gavel_ci/templates/build.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>Gavel CI Build: {{project}} #{{build.build_id}}</h1>
+<h1>Gavel CI Build:
+  <a href="{{url_for('jobserv.project', proj=project)}}">{{project}}</a>
+  #{{build.build_id}}
+</h1>
 
 <div style="padding-left: 20px;">
 <dl class="row">
