Add view for the history of a run
This helps spot flaky CI runs

Signed-off-by: Andy Doan <andy@foundries.io>

--- a/gavel_ci/templates/run.html
+++ b/gavel_ci/templates/run.html
@@ -36,6 +36,9 @@
   <dt class="col-sm-3">Tests</dt>
   <dd><a href="{{url_for('jobserv.tests', proj=project, build=build, run=run.name)}}">Report</a></dd>
   {% endif %}
+
+  <dt class="col-sm-3">History</dt>
+  <dd><a href="{{url_for('jobserv.project_run_history', proj=project, run=run.name)}}">Run History</a></dd>
 </dl>
 </div>
 
