missing semi-colon

--- a/gavel_ci/templates/console.html
+++ b/gavel_ci/templates/console.html
@@ -21,7 +21,7 @@
     let tailElement = $("#console-log-tail");
     let downloadElement = $("#console-raw");
     let statusElement = $("#console-status");
-    let terminalStates = ["PASSED", "FAILED", "PROMOTED"]
+    let terminalStates = ["PASSED", "FAILED", "PROMOTED"];
     var offset = 0;
     let messageTailWindow = 40;
     var messageTail = [];
