--- a/gavel_ci/templates/console.html
+++ b/gavel_ci/templates/console.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>Gavel CI Build: <a href="{{url_for('jobserv.project', proj=proj)}}">{{proj}}</a> <a href="{{url_for('jobserv.build',proj=proj, build=build)}}">#{{build}}</a> - {{run}}</h1>
+<h1>Gavel CI Run:
+  <a href="{{url_for('jobserv.project', proj=proj)}}">{{proj}}</a>
+  <a href="{{url_for('jobserv.build',proj=proj, build=build)}}">#{{build}}</a>
+  - <a href="{{url_for('jobserv.run', proj=project, build=build, run=run)}}">{{run}}</a>
 <h3>
     console
         (<a
