Fix bad link in console log
Signed-off-by: Andy Doan <andy@foundries.io>

--- a/gavel_ci/templates/console.html
+++ b/gavel_ci/templates/console.html
@@ -3,7 +3,7 @@
 <h1>Gavel CI Run:
   <a href="{{url_for('jobserv.project', proj=proj)}}">{{proj}}</a>
   <a href="{{url_for('jobserv.build',proj=proj, build=build)}}">#{{build}}</a>
-  - <a href="{{url_for('jobserv.run', proj=project, build=build, run=run)}}">{{run}}</a>
+  - <a href="{{url_for('jobserv.run', proj=proj, build=build, run=run)}}">{{run}}</a>
 <h3>
     console
         (<a
