Include all-time stats numbers for fun
Signed-off-by: Andy Doan <andy@foundries.io>

--- a/gavel_ci/templates/status.html
+++ b/gavel_ci/templates/status.html
@@ -76,4 +76,10 @@
   </tbody>
 </table>
 
+<h3>All-time stats</h3>
+<pre>
+Runs PASSED: {{health.statuses.PASSED}}
+Runs FAILED: {{health.statuses.FAILED}}
+</pre>
+
 {% endblock %}
